--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --config config/vite.config.js",
+    "dev": "vite --config configs/vite.config.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
